[package]
name = "elma"
version = "0.0.1"
authors = ["Roger Andersen <hexjelly@hexjelly.com>"]
description = "Library for reading and writing Elasto Mania files."
documentation = "http://hexjelly.github.io/elma-rust/elma/"
homepage = "https://github.com/hexjelly/elma-rust"
repository = "https://github.com/hexjelly/elma-rust"
readme = "README.md"
keywords = ["Elasto Mania", "Elma"]
license = "MIT"

[dependencies]
byteorder = "0.5.0"
rand = "*"
